--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script src="https://threejs.org/build/three.js"></script> 
     <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
     <center>    
-         <h6>^_^ Three.js Programme. Made with love by Shobhit :)</h6>             
+         <h6>^_^ Three.js Programme. Made with love by Ndiritu Metasploit :)</h6>             
     </center> 
     <div id="details">
         No. of rotation [Earth]: <span id="earthSp"></span><br>
